Update: app title

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <script src="https://apis.google.com/js/api.js"></script>
-    <title>Chingu Connect</title>
+    <title>readyevent</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
